--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "jquery": "^3.3.1",
     "mint-ui": "^2.2.13",
     "vue": "^2.6.7",
