--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --open --port 3000 --hot --host 192.168.137.1"
+    "dev": "webpack-dev-server --open --port 3000 --hot"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +17,8 @@
     "moment": "^2.24.0",
     "vue": "^2.6.7",
     "vue-router": "^3.0.2",
-    "vue2-preview": "^1.0.5"
+    "vue2-preview": "^1.0.5",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
